--- a/MCP73834_li-ion charger.cmp
+++ b/MCP73834_li-ion charger.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 3/27/2015 6:45:19 PM
+Cmp-Mod V01 Created by Cvpcb (2015-01-16 BZR 5376)-product   date = 3/27/2015 10:03:47 PM
 
 BeginCmp
 TimeStamp = /55157C5D;
@@ -18,7 +18,7 @@ BeginCmp
 TimeStamp = /55168A2E;
 Reference = CON101;
 ValeurCmp = USB-MICRO-B;
-IdModule  = Connect:USB_Micro-B;
+IdModule  = USB connectors:USB_Micro-B_FCI_10118193-0001LF;
 EndCmp
 
 BeginCmp
@@ -40,13 +40,6 @@ TimeStamp = /551581E5;
 Reference = D103;
 ValeurCmp = LED;
 IdModule  = LEDs:LED-0805;
-EndCmp
-
-BeginCmp
-TimeStamp = /551584CA;
-Reference = P101;
-ValeurCmp = CONN_01X02;
-IdModule  = Pin_Headers:Pin_Header_Straight_1x02;
 EndCmp
 
 BeginCmp
@@ -116,7 +109,7 @@ BeginCmp
 TimeStamp = /55157F13;
 Reference = TH101;
 ValeurCmp = THERMISTOR;
-IdModule  = battery logger:SolderWirePad_2x_0-8mmDrill;
+IdModule  = Pin_Headers:Pin_Header_Straight_1x02;
 EndCmp
 
 BeginCmp
